apps/statuspage/ansible/manifests/route-prometheus.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: prometheus
  name: prometheus
spec:
  port:
    targetPort: 9090-tcp
  to:
    kind: Service
    name: prometheus
    weight: 100
  wildcardPolicy: None
