apps/statuspage/ansible/manifests/service-blackbox-exporter.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: '9115'
    prometheus.io/scheme: http
    prometheus.io/scrape: 'true'
  labels:
    app: blackbox-exporter
  name: blackbox-exporter
spec:
  ports:
    - name: 9115-tcp
      port: 9115
      protocol: TCP
      targetPort: 9115
  selector:
    app: blackbox-exporter
  sessionAffinity: None
  type: ClusterIP
